# diffusion_microscopy

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.html
src/config/: config.py
src/data/: dataset.py
src/models/: diffusion_model.py
src/training/: train.py
src/utils/: utils.py
